# Hop_Rag

./: .gitignore  README.md  api.py  app.py  config.py  pyproject.toml  rag.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js
frontend/src/api/: index.js
frontend/src/assets/: styles.css
frontend/src/router/: index.js
frontend/src/views/: Chat.vue  KnowledgeBase.vue
