[project]
name = "hop-rag"
version = "1.0.0"
description = "中医知识问答系统 - 基于检索增强生成 (RAG) 技术的智能中医知识问答系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chardet>=7.0.1",
    "cpm-kernels>=1.0.11",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.100.0",
    "gradio>=6.8.0",
    "jieba==0.42.1",
    "llama-index>=0.14.15",
    "lxml==4.9.4",
    "mdtex2html>=1.3.2",
    "openai>=2.26.0",
    "protobuf>=6.33.5",
    "pyfunctional==1.3.0",
    "pymupdf>=1.27.1",
    "sentencepiece>=0.2.1",
    "sse-starlette>=3.3.2",
    "streamlit>=1.24.0",
    "torch>=2.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
hop-rag = "app:main"

[tool.uv]
dev-dependencies = []
